[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://User Interface/ControlsHelp.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "Starship Asteroid"
align = 1
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 315.0
margin_top = 166.0
margin_right = -317.0
margin_bottom = -72.0
custom_constants/separation = 45

[node name="StartButton" type="Button" parent="ButtonContainer"]
margin_right = 392.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="OpitionsButton" type="Button" parent="ButtonContainer"]
margin_top = 135.0
margin_right = 392.0
margin_bottom = 225.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Opitions"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
margin_top = 270.0
margin_right = 392.0
margin_bottom = 362.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="Help" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonContainer/OpitionsButton" to="." method="_on_OpitionsButton_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
